# plugin-store

./: .gitignore  CLAUDE.md  Cargo.toml  README-ZH.md  README.md  install-local.sh  registry.json
.claude-plugin/: marketplace.json
.github/: CODEOWNERS
_verification/: aave-v3.json  aerodrome-amm.json  balancer-v2.json  beefy.json  camelot-v3.json  compound-v2.json  compound-v3.json  curve.json  dolomite.json  euler-v2.json  fluid.json  frax-ether.json  gmx-v1.json  instadapp.json  jito.json  kamino-lend.json  kamino-liquidity.json  kelp.json  lido.json  lifi.json  moonwell.json  morpho-base.json  morpho.json  notional-v3.json  pancakeswap-v2.json  pancakeswap.json  pendle.json  relay.json  renzo.json  rocket-pool.json  segment-finance.json  solayer.json  spark-savings.json  stader.json  stakestone.json  sushiswap-v3.json  swell-restaking.json  swell-staking.json  symbiotic.json  (+5 more)
skills/bluefin/: Cargo.toml  README.md  SKILL.md  design.md  plugin.yaml
skills/bluefin/src/: api.rs  config.rs  main.rs  rpc.rs
skills/bluefin/src/commands/: close_position.rs  markets.rs  mod.rs  open_position.rs  positions.rs  quote.rs
skills/cian-yield-layer/: Cargo.toml  SKILL.md  SKILL_SUMMARY.md  SUMMARY.md  design.md  plugin.yaml
skills/cian-yield-layer/skills/cian-yield-layer/: SKILL.md
skills/cian-yield-layer/src/: api.rs  config.rs  main.rs  onchainos.rs  rpc.rs
skills/cian-yield-layer/src/commands/: balance.rs  deposit.rs  mod.rs  positions.rs  request_redeem.rs  vaults.rs
skills/cian-yield-layer/tests/: routing_test.md  test_cases.md  test_results.md
skills/dolomite/: Cargo.toml  README.md  SKILL.md  SKILL_SUMMARY.md  SUMMARY.md  plugin.yaml
skills/dolomite/.claude-plugin/: plugin.json
skills/dolomite/src/: config.rs  main.rs  onchainos.rs  rpc.rs
skills/dolomite/src/commands/: borrow.rs  deposit.rs  markets.rs  mod.rs  positions.rs  repay.rs  withdraw.rs
skills/jito/: Cargo.toml  README.md  SKILL.md  SKILL_SUMMARY.md  SUMMARY.md  plugin.yaml
skills/jito/.claude-plugin/: plugin.json
skills/jito/src/: config.rs  main.rs  onchainos.rs  rpc.rs
skills/jito/src/commands/: mod.rs  positions.rs  rates.rs  stake.rs  unstake.rs
skills/navi-protocol/: .SUBMISSION_REQUIREMENTS.md  Cargo.toml  LICENSE  README.md  SKILL.md  design.md  plugin.yaml
skills/navi-protocol/src/: api.rs  config.rs  main.rs  rpc.rs
skills/navi-protocol/src/commands/: borrow.rs  mod.rs  positions.rs  repay.rs  reserves.rs  supply.rs  withdraw.rs
skills/symbiotic/: Cargo.toml  README.md  SKILL.md  plugin.yaml
skills/symbiotic/.claude-plugin/: plugin.json
skills/symbiotic/src/: api.rs  config.rs  main.rs  onchainos.rs  rpc.rs
skills/symbiotic/src/commands/: deposit.rs  positions.rs  rates.rs  vaults.rs  withdraw.rs
(+1241 files in other folders)
