[package]
name = "cian-yield-layer"
version = "0.1.0"
edition = "2021"
description = "CIAN Yield Layer -- ERC4626 vaults on Ethereum with recursive staking/restaking strategies"

[[bin]]
name = "cian-yield-layer"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
