[package]
name = "jito"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jito"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
base64 = "0.22"
bs58 = "0.5"
sha2 = "0.10"
