[package]
name = "navi-protocol"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "navi-protocol"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
